Updated ngrok and jenkins config

--- a/demo/provisioning/ansible/roles/jenkins/templates/jenkins.j2
+++ b/demo/provisioning/ansible/roles/jenkins/templates/jenkins.j2
@@ -60,7 +60,8 @@ MAXOPENFILES=8192
 # UMASK=027
 
 # port for HTTP connector (default 8080; disable with -1)
-HTTP_PORT=8081
+# 6650 is Nile River length in kms
+HTTP_PORT=6650  
 
 
 # servlet context, important if you want to use apache proxying
