Updated sonarqube configs

--- a/demo/provisioning/ansible/roles/sonarqube/templates/sonar.properties.j2
+++ b/demo/provisioning/ansible/roles/sonarqube/templates/sonar.properties.j2
@@ -421,5 +421,5 @@
 sonar.jdbc.username=sonar
 sonar.jdbc.password=sonar
 sonar.jdbc.url=jdbc:postgresql://localhost/sonar
-sonar.web.javaAdditionalOpts=-server
-sonar.web.host=0.0.0.0
+#sonar.web.javaAdditionalOpts=-server
+#sonar.web.host=0.0.0.0
